<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/headerblue"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/footer_rectangle" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

    <ScrollView
        android:id="@+id/scoll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:layout_below="@id/txt_register"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:elevation="5dp">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

        <TextView
            android:id="@+id/txt_NIK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/nik"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_NIK"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_NIK"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rectangle_white"
                android:elevation="5dp"
                android:hint="@string/nonik"
                android:inputType="number"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/blue_dark"
                android:textSize="15sp" />


        <TextView
            android:layout_below="@id/edit_NIK"
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_name"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rectangle_white"
                android:elevation="5dp"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/blue_dark"
                android:textSize="15sp" />

        <TextView
            android:layout_below="@id/edit_name"
            android:id="@+id/txt_placeofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/placeofbirth"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_placeofbirth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_placeofbirth"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rectangle_white"
                android:elevation="5dp"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/blue_dark"
                android:textSize="15sp" />

        <TextView
            android:layout_below="@id/edit_placeofbirth"
            android:id="@+id/txt_dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/dateofbirth"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

         <TextView
             android:id="@+id/date_txt"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@id/txt_dateofbirth"
             android:hint="@string/date"
             android:background="@drawable/rectangle_white"
             android:layout_marginHorizontal="20dp"
             android:elevation="5dp"
             android:drawableEnd="@drawable/ic_calender"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:gravity="center|start"
             android:textColor="@color/blue_dark"
             android:textSize="15sp" />

            <Button
                android:id="@+id/btn_dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_dateofbirth"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent" />

        <TextView
            android:layout_below="@id/date_txt"
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/address"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

            <EditText
                android:scrollbars="vertical"
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_address"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/rectangle_white"
                android:elevation="5dp"
                android:gravity="start"
                android:hint="@string/homeaddress"
                android:lines="3"
                android:maxLength="300"
                android:padding="10dp"
                android:textColor="@color/blue_dark"
                android:textSize="15sp" />

        <TextView
            android:layout_below="@id/edit_address"
            android:id="@+id/txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/gender"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/resultgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/txt_gender"
                android:textColor="@android:color/transparent"/>

        <RadioGroup
            android:layout_below="@id/txt_gender"
            android:id="@+id/radio_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_male"
                android:fontFamily="sans-serif"
                android:paddingTop="10dp"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@color/blue_dark"
                android:textSize="13sp"
                android:textStyle="bold"
                android:elevation="5dp"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/radio_selector"
                android:drawableTop="@drawable/ic_female"
                android:fontFamily="sans-serif"
                android:button="@android:color/transparent"
                android:paddingTop="10dp"
                android:text="@string/female"
                android:textAlignment="center"
                android:textColor="@color/blue_dark"
                android:textSize="13sp"
                android:textStyle="bold"
                android:elevation="5dp"/>
        </RadioGroup>

        <TextView
            android:layout_below="@id/radio_gender"
            android:id="@+id/txt_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/occupation"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />


            <Spinner
                android:id="@+id/spin_occupation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_occupation"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/style_spinner"
                android:elevation="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:popupBackground="@drawable/rectangle_white"
                android:popupElevation="5dp"
                android:textAllCaps="true"
                android:textColor="@color/blue_dark"
                android:textSize="15sp"/>

        <TextView
            android:layout_below="@id/spin_occupation"
            android:id="@+id/txt_maritalstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/maritalstatus"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_maritalstatus"
                android:layout_width="match_parent"
                android:popupElevation="5dp"
                android:popupBackground="@drawable/rectangle_white"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@id/txt_maritalstatus"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_spinner"
                android:elevation="5dp"
                android:textAllCaps="true"
                android:textColor="@color/blue_dark"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/cb_term"
                android:layout_below="@id/spin_maritalstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/agree"
                android:textColor="@color/blue_dark" />

            <TextView
                android:layout_below="@id/spin_maritalstatus"
                android:layout_toEndOf="@id/cb_term"
                android:id="@+id/txt_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tnc"
                android:paddingTop="6dp"
                android:paddingBottom="5dp"
                android:textColor="@color/blue_dark"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/cb_term"
                android:background="@drawable/rectangle_bluedark"
                android:elevation="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/Cancel"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/cb_term"
                android:background="@drawable/rectangle_bluedark"
                android:elevation="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>