<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/footer_rectangle"/>

    <ImageView
        android:id="@+id/profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_account"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/hi"
                android:layout_below="@id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi"
                android:layout_marginStart="30dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/hi"
        android:elevation="5dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/datainf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/blue_dark"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:layout_below="@id/datainf"
                android:id="@+id/txt_nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/nik"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_nik"
                android:id="@+id/rslt_nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/nik"
                android:textStyle="italic"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <TextView
                android:layout_below="@id/rslt_nik"
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_name"
                android:id="@+id/rslt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textStyle="italic"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_placeofbirth"
                android:layout_below="@id/rslt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/placeofbirth"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_placeofbirth"
                android:id="@+id/rslt_placeofbirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:text="@string/placeofbirth"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/txt_dateofbirth"
                android:layout_below="@id/rslt_name"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/dateofbirth"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_dateofbirth"
                android:id="@+id/rslt_dateofbirth"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:text="@string/dateofbirth"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_address"
                android:layout_below="@id/rslt_placeofbirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/address"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_address"
                android:id="@+id/rslt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:text="@string/address"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_gender"
                android:layout_below="@id/rslt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/gender"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_gender"
                android:id="@+id/rslt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/gender"
                android:textStyle="italic"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_occupation"
                android:layout_below="@id/rslt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/occupation"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_occupation"
                android:id="@+id/rslt_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:textStyle="italic"
                android:text="@string/occupation"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_maritalstatus"
                android:layout_below="@id/rslt_gender"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/maritalstatus"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@id/txt_maritalstatus"
                android:id="@+id/rslt_maritalstatus"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/maritalstatus"
                android:textStyle="italic"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/rslt_occupation"
                android:background="@drawable/rectangle_red"
                android:elevation="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>